force-app/main/default/objects/Bill_Pay__c/Bill_Pay__c.object-meta.xml
<CustomObject>
    <label>Bill Pay</label>
    <nameField>
        <displayFormat>PAY-{YYYY}-{MM}-{000000}</displayFormat>
        <label>Bill Pay</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bill Pays</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>