force-app/main/default/objects/Bill_Pay__c/fields/Credit_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Number__c</fullName>
    <label>Credit Card Number</label>
    <length>20</length>
    <maskChar>X</maskChar>
    <maskType>creditCard</maskType>
    <type>EncryptedText</type>
</CustomField>