force-app/main/default/objects/Bill_Pay__c/fields/Debit_From_Account__c.field-meta.xml
<CustomField>
    <fullName>Debit_From_Account__c</fullName>
    <label>Debit From Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Safe</fullName>
            </value>
            <value>
                <fullName>Irrational Raccoon</fullName>
            </value>
            <value>
                <fullName>Green Thread Property</fullName>
            </value>
            <value>
                <fullName>Green Thread Technology</fullName>
            </value>
            <value>
                <fullName>Green Thread Holdings</fullName>
            </value>
            <value>
                <fullName>IRR Clearing Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>