force-app/main/default/objects/Bill_Pay__c/fields/Paid_To__c.field-meta.xml
<CustomField>
    <fullName>Paid_To__c</fullName>
    <formula>Supplier_Bill__r.Supplier_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paid To</label>
    <type>Text</type>
</CustomField>