force-app/main/default/objects/Bill_Pay__c/fields/Payment_Form__c.field-meta.xml
<CustomField>
    <fullName>Payment_Form__c</fullName>
    <label>Payment Form</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Debit Card</fullName>
            </value>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>Clearing Account</fullName>
            </value>
            <value>
                <fullName>Wire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>