force-app/main/default/objects/Bill_Pay__c/fields/Payment_Memo__c.field-meta.xml
<CustomField>
    <fullName>Payment_Memo__c</fullName>
    <label>Payment Memo</label>
    <type>TextArea</type>
</CustomField>