force-app/main/default/objects/Bill_Pay__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <formula>Supplier_Bill__r.Purchase_Order__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Order</label>
    <type>Text</type>
</CustomField>