force-app/main/default/objects/Bill_Pay__c/fields/Reconciliation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Reconciliation_Notes__c</fullName>
    <label>Reconciliation Notes</label>
    <type>TextArea</type>
</CustomField>