force-app/main/default/objects/Bill_Pay__c/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <formula>Supplier_Bill__r.Reference__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reference</label>
    <type>Text</type>
</CustomField>