force-app/main/default/objects/Bill_Pay__c/fields/Security_Code__c.field-meta.xml
<CustomField>
    <fullName>Security_Code__c</fullName>
    <label>Security Code</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>