force-app/main/default/objects/Bill_Pay__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <formula>Supplier_Bill__r.Site__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site</label>
    <type>Text</type>
</CustomField>