force-app/main/default/objects/Bill_Pay__c/fields/Supplier_Bill__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Bill__c</fullName>
    <label>Supplier Bill</label>
    <referenceTo>Supplier_Bill__c</referenceTo>
    <relationshipLabel>Bill Pays</relationshipLabel>
    <relationshipName>Bill_Pays</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>