force-app/main/default/objects/Bill_Pay__c/fields/Valid_Thru_Year__c.field-meta.xml
<CustomField>
    <fullName>Valid_Thru_Year__c</fullName>
    <label>Valid Thru Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>