force-app/main/default/objects/Bill_Pay__c/validationRules/Disallow_Payment_for_Draft_Bills.validationRule-meta.xml
<ValidationRule>
    <fullName>Disallow_Payment_for_Draft_Bills</fullName>
    <active>true</active>
    <description>Disallow Bill Pays for Supplier Bill in Draft</description>
    <errorConditionFormula>ISPICKVAL(Supplier_Bill__r.Status__c, &apos;Draft&apos;)</errorConditionFormula>
    <errorDisplayField>Supplier_Bill__c</errorDisplayField>
    <errorMessage>Payment Not Authorized for Supplier Bills in Draft</errorMessage>
</ValidationRule>