force-app/main/default/objects/Bill_Pay__c/listViews/All_Bill_Pay.listView-meta.xml
<ListView>
    <fullName>All_Bill_Pay</fullName>
    <columns>NAME</columns>
    <columns>Supplier_Bill__c</columns>
    <columns>Purchase_Order__c</columns>
    <columns>Reference__c</columns>
    <columns>Paid_To__c</columns>
    <columns>Debit_From_Account__c</columns>
    <columns>Payment_Date__c</columns>
    <columns>Payment_Amount__c</columns>
    <columns>Payment_Form__c</columns>
    <columns>Payment_Memo__c</columns>
    <columns>Post_Date__c</columns>
    <columns>Chart_of_Account__c</columns>
    <columns>Reconciled__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Bill Pay</label>
</ListView>